<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageViewAD"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@string/descImg"
                    android:paddingTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/nameApp"
                    android:id="@+id/textView7"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/descripcionAD"
                    android:textSize="15sp"
                    android:id="@+id/textView9"
                    android:layout_gravity="left"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:textStyle="italic"/>
            </LinearLayout>

        <LinearLayout
            android:layout_margin="7dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/herramientas"
                android:layout_gravity="center_horizontal|center"
                android:paddingTop="10dp"
                android:textStyle="bold"/>
            </LinearLayout>

            <LinearLayout
                android:layout_margin="7dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape">

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/laravel5"/>
                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/php"/>

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/phpStorm"/>

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/android"/>

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/facebook"/>

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/picasso"/>

                <TextView
                    android:textSize="18sp"
                    android:padding="3dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/mysql"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
